--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "bugs": {
         "url": "https://github.com/l0ll098/CryProj/issues"
     },
+    "main": "./out/extension",
+    "activationEvents": [
+        "onLanguage:json"
+    ],
     "contributes": {
         "languages": [
             {
@@ -56,5 +60,19 @@
                 "url": "./schemas/cryproj.schema.json"
             }
         ]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install",
+        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    },
+    "devDependencies": {
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.6",
+        "tslint": "^5.8.0",
+        "@types/node": "^7.0.43",
+        "@types/mocha": "^2.2.42"
     }
 }
