Added a command to easily choose the wanted CRYENGINE version

--- a/package.json
+++ b/package.json
@@ -59,6 +59,12 @@
                 "fileMatch": "*.cryproj",
                 "url": "./schemas/cryproj.schema.json"
             }
+        ],
+        "commands":[
+            {
+                "title": "Set wanted CRYENGINE version",
+                "command": "extension.setVersion"
+            }
         ]
     },
     "scripts": {
