Renamed internal command identifier

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "commands":[
             {
                 "title": "Set wanted CRYENGINE version",
-                "command": "extension.setVersion"
+                "command": "CryProj.setVersion"
             }
         ]
     },
