--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "vscode": "^0.10.0"
     },
     "categories": [
-        "Languages",
+        "Programming Languages",
         "Snippets"
     ],
     "keywords": [
